manifests/football-app/football-app-microservice.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: team-1-football-app-service
    stack: frontend
  name: team-1-football-app-service
  namespace: default
spec:
  selector:
    source: demo
    app: team-1-football-app
  ports:
    -   name: web
        protocol: TCP
        port: 30201
        targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    stack: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /team-1-football-app/$1$2
  name: team-1-football-app-ingress-path
  namespace: default
spec:
  rules:
    - http:
        paths:
          -   path: /team-1-football-app(/|$)(.*)
              pathType: Prefix
              backend:
                service:
                  name: team-1-football-app-service
                  port:
                    number: 30201
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: team-1-football-app
    stack: frontend
    source: demo
  name: team-1-football-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: team-1-football-app
  template:
    metadata:
      labels:
        app: team-1-football-app
        run: team-1-football-app
        source: demo
      namespace: default
    spec:
      containers:
        -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/team-1-football-app
            name: team-1-football-app
            ports:
              -   name: web
                  containerPort: 9000
